--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
     "lucide-react": "https://esm.sh/lucide-react@0.344.0",
     "xlsx": "https://esm.sh/xlsx@0.18.5",
+    "socket.io-client": "https://esm.sh/socket.io-client@4.7.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
   }
