--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     "xlsx": "https://esm.sh/xlsx@0.18.5",
     "socket.io-client": "https://esm.sh/socket.io-client@4.7.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "vite": "https://esm.sh/vite@^7.2.7",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
